# rustPI

./: .env  .gitignore  Cargo.toml  README.md
fixtures/pkg1/: setup.py
fixtures/pkg1/pkg1.egg-info/: PKG-INFO  SOURCES.txt
migrations/2019-04-20-204607_setup_db/: down.sql  up.sql
src/: db.rs  error.rs  index.rs  main.rs  models.rs  packages.rs  schema.rs
src/domain/: model.rs
src/domain/model/: mod.rs  package.rs  python_package.rs  repository.rs
src/infra/: fs.rs  sqlite.rs
src/infrastructure/: mod.rs
src/infrastructure/web/: mod.rs  traits.rs
src/infrastructure/web/liquid/: mod.rs
src/infrastructure/web/warp/: mod.rs  python_simple.rs  server.rs
src/interface/: mod.rs  web.rs
src/interface/python_simple/: mod.rs
src/interface/python_simple/template/: simple_index.html
src/interface/web/: mod.rs  traits.rs
src/interface/web/python_simple/: mod.rs
src/sources/: file.rs  mod.rs
