[package]
name = "rustpi"
version = "0.1.0"
authors = ["Matthew Planchard <msplanchard@gmail.com>"]
edition = "2018"

[dependencies]
clap = "~2.32.0"
dirs = "~1.0.5"
diesel = { version = "~1.4.2", features = ["sqlite"] }
diesel_migrations = "~1.4.0"
dotenv = "~0.13.0"
lazy_static = "~1.3.0"
tera = "~0.11.20"
warp = "~0.1.12"
